--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,7 @@
       <form class="form-inline" action="/respuesta" method="post">
         <div class="form-group">
           <input type="text" class="form-control" name="abuela" value="">
-          <button type="submit" class="btn btn-default">Dilo!</button>
+          <input type="submit" class="btn btn-default" value="Dilo!"></input>
         </div>
 
       </form>
